Улучшена адартивность модуля с канвасом, цвета канвасы вынесены в переменные, заменена иконка, добавлены относительные пути для билда

--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -6,4 +6,7 @@
     --primary-color: #1b1b1b;
     --secondary-color: #272727;
     --tertiary-color: #434343;
+
+    --canvas-background-color: #ffffff;
+    --canvas-border-color: #cccccc;
 }
